# stepmania-ai

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_evaluation.py  run_training.py
stepmania_ai/: generate.py  train.py
stepmania_ai/data/: audio_features.py  dataset.py  extract_song_cache.py
stepmania_ai/models/: hold_note_predictor.py  hold_utils.py  onset_detector.py  pattern_generator.py  pattern_token_generator.py  pattern_vocab.py
stepmania_ai/utils/: sm_parser.py
